<?xml version="1.0"?>
<package>
  <name>squirrel_ptp_server</name>
  <version>0.0.0</version>
  <description>The squirrel_ptp_server package</description>

  <maintainer email="markus.bajones@gmail.com">markus bajones</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>squirrel_manipulation_msgs</build_depend>
  <build_depend>kukadu</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>squirrel_manipulation_msgs</run_depend>
  <run_depend>kukadu</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
