<?xml version="1.0"?>
<package>
  <name>squirrel_softhand</name>
  <version>0.0.1</version>
  <description>The squirrel_softhand package</description>

  <maintainer email="philipp.zech@uibk.ac.at">Philipp Zech</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>roscpp</buildtool_depend>
  <buildtool_depend>std_msgs</buildtool_depend>
  <buildtool_depend>std_srvs</buildtool_depend>
  <buildtool_depend>squirrel_manipulation_msgs</buildtool_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>squirrel_manipulation_msgs</run_depend>

  <export>
  </export>

</package>
