<?xml version="1.0"?>
<package>
  <name>uibk_planning_test</name>
  <version>0.0.0</version>
  <description>The uibk_planning_test package</description>

  <maintainer email="c7031109@todo.todo">c7031109</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kukadu</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>kukadu</run_depend>
  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
